    from the term dictionary using levenshtein automata.  (Robert Muir)

  * LUCENE-2791: Added WindowsDirectory, a Windows-specific Directory impl
    that doesn't synchronize on the file handle. This can be useful to 
    avoid the performance problems of SimpleFSDirectory and NIOFSDirectory.
    (Robert Muir, Simon Willnauer, Uwe Schindler, Michael McCandless)
  
API Changes

  * LUCENE-2606: Changed RegexCapabilities interface to fix thread 
    safety, serialization, and performance problems. If you have
    written a custom RegexCapabilities it will need to be updated
    to the new API.  (Robert Muir, Uwe Schindler)

  * LUCENE-2638 MakeHighFreqTerms.TermStats public to make it more useful
    for API use. (Andrzej Bialecki)

======================= Lucene 3.x (not yet released) =======================

Changes in backwards compatibility policy

 * LUCENE-2100: All Analyzers in Lucene-contrib have been marked as final.
   Analyzers should be only act as a composition of TokenStreams, users should
   compose their own analyzers instead of subclassing existing ones.
   (Simon Willnauer) 

 * LUCENE-2194, LUCENE-2201: Snowball APIs were upgraded to snowball revision
   502 (with some local modifications for improved performance). 
   Index backwards compatibility and binary backwards compatibility is 
   preserved, but some protected/public member variables changed type. This 
   does NOT affect java code/class files produced by the snowball compiler, 
   but technically is a backwards compatibility break.  (Robert Muir)
   
 * LUCENE-2226: Moved contrib/snowball functionality into contrib/analyzers.
   Be sure to remove any old obselete lucene-snowball jar files from your
   classpath!  (Robert Muir)
   
 * LUCENE-2323: Moved contrib/wikipedia functionality into contrib/analyzers.
   Additionally the package was changed from org.apache.lucene.wikipedia.analysis
   to org.apache.lucene.analysis.wikipedia.  (Robert Muir)
